# chat-ta

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  splashscreen.html  tailwind.config.js  vite.config.ts
scripts/: Logger.ts  new-component.ts  test.ts
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/App/: index.tsx
src/App/Header/: index.module.css  index.tsx  useEnforceRefreshWindow.ts
src/App/Layout/: index.module.css  index.tsx
src/api/: index.ts
src/components/MaskIcon/: index.module.css  index.tsx
src/components/MessageList/: index.module.css  index.tsx
src/components/MessageList/MessageCard/: index.module.css  index.tsx  useAutoScroll.ts
src/components/UserInput/: index.module.css  index.tsx
src/constants/: enum.ts  index.ts
src/global-context/: index.ts
src/pages/Chat/: index.module.css  index.tsx
src/pages/More/: index.module.css  index.tsx
src/types/: global.d.ts  index.ts
src/utils/: event-bus.ts  event.ts  file.ts  index.ts  initApp.ts  messages.ts  sendQuestion.ts  user-config.ts
