[package]
name = "chat-ta"
version = "0.0.1"
description = "A Tauri App"
authors = ["github@y80"]
license = "MIT LECENSE"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-ask", "dialog-confirm", "dialog-message", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "global-shortcut-all", "shell-open", "window-close", "window-hide", "window-minimize", "window-request-user-attention", "window-set-always-on-top", "window-set-focus", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

